cluster/applications/gateway-proxy/examples/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: gateway-proxy
  allowedListeners:
    namespaces:
      from: Same
