cluster/applications/gateway-proxy/examples/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: example-tcproute
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: example-listenerset
      sectionName: tcp-9000
  rules:
    - backendRefs:
        - name: echoserver
          port: 9000
